    [+] Item Frame Place & Break Checkers
    [+] ArmorStand Place & Break Checkers
    [+] EndCrystal Place & Break Checkers
    [+] 1.19.2 Support
    [+] Server Switch Checker on BungeeCord Instance
    [+] PartyAndFriend Plugin Support on BungeeCord Instance
    [+] NL Language file
    [+] Lever Interaction & Spawn Egg Checkers
    [+] Config and Discord Auto Updater
    [+] Plugin Auto Updater
    [+] ViaVersion Support which logs player's version
    [+] ArmorStand Interaction Checker
    [+] ServerAddress Checker which checks what IP/Domain the player used to join the server
    [+] Totem of Undying Usage Checker

Fixes
    [!] Plugin not starting up correctly
    [!] The null value of a player's IP on database ( even when enabled in config )
    [!] Vault Checker Issue which causes a high TPS loss
    [!] Entity Death not working correctly
    [!] Reload command not reloading from the config
    [!] Commands not working in console
    [!] LiteBans table not auto deleting on Velocity instance
    [!] RCON not logging into Files
    [!] PlayerCommands Checker not sending over Discord for Velocity Servers
    [!] Null Error when a player dies from /kill that's executed from the console
    [!] An issue when both Blacklisted and whitelisted commands are enabled
    [!] Error when an AdvancedBan command is executed through console
    [!] LiteBans error when executing a command through console

Changes
    [*] Remade permissions which will log OP and NOT OP players until they're permitted with the exempt permission
    [*] Inventory Restore Menu Title names to eliminate conflicts between other plugins
    [*] Minor messages changes
    [*] Huge Code improvements
    [*] Changed BungeeCord commands to /loggerb and Velocity to /loggerv
    [*] Fixed OP or players that have * permissions not being logged by default
    [*] Improved the accuracy of File Deletion
    [*] Slight AdvancedBan typo in the messages file

Removed
    [-] IP Column from RCON checher
