@@ -214,6 +214,7 @@ Fixes
     [!] An issue when both Blacklisted and whitelisted commands are enabled
     [!] Error when an AdvancedBan command is executed through console
     [!] LiteBans error when executing a command through console
+    [!] LiteBans Discord Integration not working
 
 Changes
     [*] Remade permissions which will log OP and NOT OP players until they're permitted with the exempt permission
